--- a/css/urgency-timer.css
+++ b/css/urgency-timer.css
@@ -1,28 +1,29 @@
 /* LARGE */
 
 .urgency-timer {
-    font-family: 'Impact', Times, serif;
+    /* font-family: 'Impact', Times, serif; */
+    font-family: 'Orbitron', sans-serif;
 }
 
 .ut-large {
-    padding: 0px 16px;
+    /* padding: 0em 0.16em; */
 }
 
 .ut-large > .ut-letters {
     color: #aaa;
-    padding-top: 1px;
-    font-size: 20px;
+    /* padding-top: 1px; */
+    /* font-size: 20px; */
 }
 
 .ut-large > .ut-hh,  .ut-large > .ut-mm {
     color: #a00;
-    padding-top: 1px;
-    font-size: 30px;
+    /* padding-top: 1px; */
+    font-size: 1.2em;
 }
 
 .ut-large > .ut-ss {
-    padding-top: 1px;
-    font-size: 30px;
+    /* padding-top: 1px; */
+    font-size: 1.5em;
 }
 
 @keyframes ut-pulse-anim {
@@ -77,7 +78,7 @@
 .ut-priceslash-parent {
   position: relative;
 /*   font-size: calc(var(--ut-size)*1); */
-  background: rgba(0, 255, 0, .5); // pink;
+/*   background: rgba(0, 255, 0, .5); */
 /*   opacity: 0.5; */
   text-align: center;
 /*   z-index: 3; */
@@ -88,7 +89,7 @@
 .ut-priceslash-text {
   font-size: 1em;
   padding: 0.2em;
-  background: rgba(0, 0, 255, 0.5); // pink;
+/*   background: rgba(0, 0, 255, 0.5); */
   display: inline-block;
 /*   opacity: 1; */
 /*   z-index: 2; */
@@ -100,7 +101,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: 
+  transform:
     translate(-50%, -50%)
     rotate(-15deg);
   transition-duration: 1s;
