Changed font Orbitron -> Damion

--- a/css/urgency-timer.css
+++ b/css/urgency-timer.css
@@ -2,7 +2,8 @@
 
 .urgency-timer {
     /* font-family: 'Impact', Times, serif; */
-    font-family: 'Orbitron', sans-serif;
+    /* font-family: 'Orbitron', sans-serif; */
+    font-family: 'Damion';
 }
 
 .ut-large {
